[gd_scene load_steps=8 format=2]

[ext_resource path="res://Recursos/Tiles/tile_0108.png" type="Texture" id=1]
[ext_resource path="res://Escenas/Enemigos/EnemigoBase.gd" type="Script" id=2]
[ext_resource path="res://Escenas/Enemigos/spawner_mark_2.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 28.0179

[sub_resource type="Animation" id=4]
resource_name = "Correr"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("IconoSpawn:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("IconoSpawn:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Spawn"
length = 2.7
tracks/0/type = "value"
tracks/0/path = NodePath("IconoSpawn:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("IconoSpawn:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.1, 1.4, 1.6, 1.8, 1.9, 2 ),
"transitions": PoolRealArray( 508.594, 1e+06, 1e+06, 1e+06, 1e+06, 1e+06, 1, 1e+06, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.352941 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.352941 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.352941 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.352941 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 2.1, 2.5 ),
"transitions": PoolRealArray( 0.366021, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.137255 ), Color( 1, 1, 1, 1 ) ]
}

[node name="EnemigoBase" type="Area2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
scale = Vector2( 5, 5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="TiempoStun" type="Timer" parent="."]
wait_time = 0.06

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Spawn"
anims/Correr = SubResource( 4 )
anims/RESET = SubResource( 3 )
anims/Spawn = SubResource( 2 )

[node name="IconoSpawn" type="Sprite" parent="."]
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_EnemigoBase_body_entered"]
[connection signal="timeout" from="TiempoStun" to="." method="_on_TiempoStun_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
